# tfreezer

./: .gitattributes  .gitignore  .pylintrc  CMakeLists.txt  LICENSE  README.md  pyproject.toml
examples/basic_check/: README.md  basic_check.py  freeze_config.py
examples/multiprocessing/: README.md  bad_multiprocessing.py  good_multiprocessing.py  multimodule_freeze_config.py  multimodule_multiprocessing.py  multiprocessing_pool.py  multiprocessing_simple.py  multiprocessing_worker.py
examples/mypyc_demo/: README.md  fib.py  freeze_config.py  mypyc_demo.py
examples/mypyc_demo/subpackage/: fib3.py
examples/pyqt5_demo/: README.md  deploy_spec.py  pyqt5_demo.py
examples/pywin32_demo/: README.md  freeze_config.py  pywin32_demo.py
examples/requests_demo/: README.md  freeze_config.py  requests_demo.py
src/tfreezer/: __init__.py  __main__.py  assemble_application.py  config.py  freeze_module.py  generate_frozen_modules.py  log.py  mypyc_source_generator.py  paths.py  python_config.py  utils.py
src/tfreezer/bootstrap/: tf_bootstrap.py  tf_importer.py  tf_multiprocessing.py  tf_pywin32.py
src/tfreezer/cppsrc/: CMakeLists.txt  main.cpp
src/tfreezer/cppsrc/cmake/: add_icon_to_binary.cmake
src/tfreezer/hooks/: hook-certifi.core.py  hook-charset_normalizer.md.py  hook-win32com.py
src/tfreezer/hooks/analysis_hooks/: __init__.py  pywin32.py
src/tfreezer/mypyc_handler/: build.py
src/tfreezer/mypyc_handler/codegen/: emitclass.py  emitfunc.py  emitmodule.py  emitwrapper.py
